--- a/home.html
+++ b/home.html
@@ -8,11 +8,11 @@
 	</head>
     <body>
         <div class="card">
-            <h1>Auto Re-Train webhook</h1>
+            <h1>Chunk+embed webhook</h1>
 
-            <p>This is a webhook space to auto-retrain on model when a dataset changes.</p>
+            <p>This is a webhook space to chunk and embed a dataset when it changes.</p>
 
-            <p>Check out the guide <a href="https://huggingface.co/docs/hub/webhooks-guide-auto-retrain" target="_blank">here</a>!</p>
+            <p>Use this as a reference <a href="https://huggingface.co/docs/hub/webhooks-guide-auto-retrain" target="_blank">here</a>!</p>
         </div>
     </body>
 </html>
