--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Auto Re-Train</title>
+		<title>Auto chunking and embedding</title>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
     <body>
